paymentapp-gitops/apps/payment-service/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: payment-system
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: payment.local
      http:
        paths:
          - path: /transfer
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
